update: remove text-spacing

--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -60,7 +60,7 @@
               <button class="btn btn-solid">Register</button>
             </form>
           </div>
-          <div class="footer-link pt-6 spacing-01">
+          <div class="footer-link pt-6">
             Already have an account? <a href="/auth/login/">Login</a>
           </div>
         </div>
