add: utils function for profile, profile page styling and profile rendering script

--- a/profile/index.html
+++ b/profile/index.html
@@ -26,10 +26,10 @@
         <button class="btn btn-danger ml-1" id="logout-btn">Logout</button>
       </div>
     </nav>
-    <h1>Profile</h1>
-
-    <form name="updateProfile">
-      <button>Update Profile</button>
-    </form>
+    <main>
+      <div class="container">
+        <div class="profile-container"></div>
+      </div>
+    </main>
   </body>
 </html>
