add: search functionality and styling

--- a/profile/index.html
+++ b/profile/index.html
@@ -15,7 +15,7 @@
         </a>
         <input
           class="search-box form-control"
-          id="searchBox"
+          id="searchInput"
           type="text"
           placeholder="Search"
         />
