--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
         <input
           class="search-box form-control"
-          id="searchBox"
+          id="searchInput"
           type="text"
           placeholder="Search"
         />
