add: following page and list all following functionality

--- a/follow/index.html
+++ b/follow/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noroff FED2 JS2 CA</title>
     <script type="module" src="/src/app.js"></script>
   </head>
-
   <body>
     <nav class="navbar">
       <div class="l-nav">
@@ -28,14 +26,10 @@
         <button class="btn btn-danger ml-1" id="logout-btn">Logout</button>
       </div>
     </nav>
-
     <main>
       <div class="container">
-        <main>
-          <div class="search-wrapper">
-            <div class="search-result-container"></div>
-          </div>
-        </main>
+        <h2 class="page-header">Following author</h2>
+        <div class="author-grid"></div>
       </div>
     </main>
   </body>
